# llm_learn

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: eval_prompts.json  tiny_instruct.jsonl
docs/: 00_overview.md  01_environment_macos.md  02_datasets.md  03_peft_lora.md  04_evaluation.md  05_deploy_jetson.md
src/llm_learn/: __init__.py  data.py  eval.py  infer.py  train_lora.py  utils.py
tests/: test_data.py  test_device.py
